--- a/django/general/templates/general/cookies.html
+++ b/django/general/templates/general/cookies.html
@@ -1,7 +1,57 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load static %}
 
-{% block content %}
-    <h1>Cookies</h1>
-    <p>The RSG Django Template website does not use cookies. For more information about cookies, including what they are and how you can manage them, please visit the University of Birmingham’s <a href="https://www.birmingham.ac.uk/privacy/cookies.aspx">cookies policy page</a>.</p>
+{% block main %}
+
+    <div class="container">
+        <div>
+            <h2>Cookies information</h2>
+            <p>
+                For information about cookies, including what they are and how you can manage them, please visit the University of Birmingham's <a href="https://www.birmingham.ac.uk/privacy/cookies.aspx">cookies statement</a>.
+            </p>
+        </div>
+        <div>
+            <h2>Cookies used on this website</h2>
+
+            <table>
+                <tr>
+                    <th>Provider</th>
+                    <th>Cookie</th>
+                    <th>Purpose</th>
+                    <th>Expiry</th>
+                </tr>
+                <tr>
+                    <td>This website</td>
+                    <td>cookie_msg_hide</td>
+                    <td>
+                        Used to know if you've previously hidden the cookies information messages on our site
+                    </td>
+                    <td>
+                        1000 days
+                    </td>
+                </tr>
+                <tr>
+                    <td>This website</td>
+                    <td>csrftoken</td>
+                    <td>
+                        A token used to enhance the security of the site by preventing Cross-Site Request Forgery (CSRF) attacks
+                    </td>
+                    <td>
+                        1 year
+                    </td>
+                </tr>
+                <tr>
+                    <td>This website</td>
+                    <td>sessionid</td>
+                    <td>
+                        Used to maintain your session when you're logged into your account on the website
+                    </td>
+                    <td>
+                        2 weeks
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+
 {% endblock %}
