--- a/django/core/templates/base.html
+++ b/django/core/templates/base.html
@@ -1,29 +1,132 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
+    
         <title>Sensing Space</title>
+
+        <!--Meta-->
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css?family=Roboto:700,900" rel="stylesheet">
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    </head>
-    <body>
-        <main role="main" id="main">
-            {% block content %}{% endblock %}
-        </main>
-        <footer role="contentinfo">
-            <p>
-                <a href="https://www.birmingham.ac.uk/privacy/index.aspx" target="_blank">Privacy</a> |
-                <a href="https://www.birmingham.ac.uk/legal/index.aspx" target="_blank">Legal</a> |
-                <a href="https://www.birmingham.ac.uk/university/governance/policies-regs/information/index.aspx" target="_blank">Freedom of Information</a> |
-                <a href="{% url 'general:cookies' %}">Cookies</a> |
-                <a href="https://accessibility.bear.bham.ac.uk/" target="_blank">Accessibility</a>
-            </p>
-        </footer>
+        <meta name="description" content="Sensing Space research project website">
+        <meta name="author" content="University of Birmingham">
+
+        <!-- Fonts -->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600&display=swap" rel="stylesheet"> 
+
+        <!-- CSS -->
+        <!-- Bootstrap -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+        <!-- Font Awesome -->
+        <link rel="stylesheet" 
+            href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" 
+            integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" 
+            crossorigin="anonymous">
+
+        <!-- Custom -->
+        <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/custom_small.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/custom_large.css' %}">
+
+        <!-- Favicon -->
+        <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
 
         <!-- JavaScript -->
+        <!-- jQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <!-- Google analytics tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-CX9K0FEHK3"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-CX9K0FEHK3');
+        </script>
+
+    </head>
+
+    <body>
+
+        <!-- Navigation bar -->
+        <nav class="navbar fixed-top navbar-expand-lg">
+            <!-- Logo -->
+            <a class="navbar-brand" href="{% url 'researchdata:survey-create' %}">
+                <h1>Sensing Space</h1>
+            </a>
+            <!-- Nav toggle button (for small screens) -->
+            <button class="navbar-toggler" type="button" title="navbartoggle" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false">
+                <i class="fas fa-bars"></i>
+            </button>
+            <!-- Nav list -->
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav ml-auto">
+                    <!-- Welcome -->
+                    <li class="nav-item">
+                        <a class="nav-link{% if request.path == '/' or request.path == '/ld/' %} active{% endif %}" href="{% url 'researchdata:survey-create' %}">
+                            Welcome
+                        </a>
+                    </li>
+                    <!-- About -->
+                    <li class="nav-item">
+                        <a class="nav-link{% if '/about/' in request.path %} active{% endif %}" href="{% url 'general:about' %}">
+                            About
+                        </a>
+                    </li>
+                    <!-- Campus -->
+                    <li class="nav-item">
+                        <a class="nav-link{% if '/campus/' in request.path %} active{% endif %}" href="{% url 'general:campus' %}">
+                            Campus
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <!-- Main -->
+        <main id="main">
+            <div id="main-content">
+                {% block main %}
+                {% endblock %}
+            </div>
+        </main>
+
+        <!-- Footer -->
+        <footer class="container-fluid">
+            <!-- Content -->
+            <div id="footer-content" class="container">
+                <div id="footer-content-logos">
+                    <!-- University of Birmingham -->
+                    <a href="https://www.birmingham.ac.uk/" target="_blank"><img src="{% static 'images/uob.png' %}" alt="University of Birmingham"></a>
+                </div>
+                <p>
+                    <strong>Sensing Space</strong> is a research project led by <a href="https://www.birmingham.ac.uk/staff/profiles/english/butchard-dorothy">Dr Dorothy Butchard</a> and <a href="https://www.birmingham.ac.uk/staff/profiles/tr/kidwell-jeremy">Dr Jeremy Kidwell</a> at the <a href="http://www.birmingham.ac.uk">University of Birmingham</a>
+                </p>
+                <p>
+                    This website has been developed by the <a href="http://www.birmingham.ac.uk/bear-software">Research Software Group</a> for the <a href="https://www.birmingham.ac.uk/university/colleges/artslaw/index.aspx">College of Arts and Law</a>
+                </p>
+                <p>
+                    <a href="https://www.birmingham.ac.uk/privacy/index.aspx" target="_blank">Privacy</a> |
+                    <a href="https://www.birmingham.ac.uk/legal/index.aspx" target="_blank">Legal</a> |
+                    <a href="https://www.birmingham.ac.uk/university/governance/policies-regs/information/index.aspx" target="_blank">Freedom of Information</a> |
+                    <a href="{% url 'general:cookies' %}">Cookies</a> |
+                    <a href="https://accessibility.bear.bham.ac.uk/statements-cal.html" target="_blank">Accessibility</a>
+                </p>	
+                <p>
+                    © University of Birmingham {% now "Y" %}
+                </p>
+            </div>
+        </footer>
+
+        <!-- Cookies popup message (must be at bottom of body) -->
         <script src="{% static 'js/cookiesmsg.js' %}"></script>
+
     </body>
+
 </html>
