--- a/django/general/templates/general/cookies.html
+++ b/django/general/templates/general/cookies.html
@@ -21,6 +21,36 @@
                     <th>Expiry</th>
                 </tr>
                 <tr>
+                    <td>Google Analytics</td>
+                    <td>_ga</td>
+                    <td>
+                        This helps us count how many people visit our website by tracking if you’ve visited before 
+                    </td>
+                    <td>
+                        2 years
+                    </td>
+                </tr>
+                <tr>
+                    <td>Google Analytics</td>
+                    <td>_gid</td>
+                    <td>
+                        This helps us count how many people visit our website by tracking if you’ve visited before 
+                    </td>
+                    <td>
+                        24 hours
+                    </td>
+                </tr>
+                <tr>
+                    <td>Google Analytics</td>
+                    <td>_gat</td>
+                    <td>
+                        Used to manage the rate at which page view requests are made 
+                    </td>
+                    <td>
+                        10 minutes
+                    </td>
+                </tr>
+                <tr>
                     <td>This website</td>
                     <td>cookie_msg_hide</td>
                     <td>
