--- a/django/core/templates/base.html
+++ b/django/core/templates/base.html
@@ -42,12 +42,12 @@
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         <!-- Google analytics tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-CX9K0FEHK3"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-GH8ETGGN6C"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-            gtag('config', 'G-CX9K0FEHK3');
+            gtag('config', 'G-GH8ETGGN6C');
         </script>
 
     </head>
