latest updates from Jeremy, inc about content, location changes, etc

--- a/django/general/templates/general/about.html
+++ b/django/general/templates/general/about.html
@@ -6,7 +6,16 @@
 <section class="container">
     <h2>About the Project</h2>
     <p>
-        Sensing Space ... 
+        The co-directors of the sensing space project, <a href="https://www.birmingham.ac.uk/staff/profiles/english/butchard-dorothy">Dorothy</a> and <a href="https://www.birmingham.ac.uk/staff/profiles/tr/kidwell-jeremy">Jeremy</a>, are interested in all the ways that we can define our built environment. This project began with insights from staff and students during our workshop for <a href="https://imaginingwellbeing.bham.ac.uk/in-space-feeling-the-built-environment/">Neurodiversity Celebration Week 2024</a>. We aim to celebrate spaces that feel cozy or reassuring, and draw attention to ways a space can make us feel uncomfortable, alert, excluded, thoughtful and so on.
+    </p>
+    <p>
+        There is a huge diversity in the ways that people experience space, and we are collecting data for this project in part to gather a body of evidence about the different ways that different kinds of human bodies are affected by the spaces where we think and learn together on the University campus. As an optional feature, our app can also be used to keep track of your own experience of different spaces to identify patterns and areas that may prompt a particular set of responses.
+    </p>
+    <p>
+        We hope you’ll feel free to share some anonymous feedback with us about the spaces where you are, and together we can raise awareness about different kinds of sensory experiences.
+    </p>
+    <p>
+        If you'd like to get involved with next steps in the project, we'd love to hear from you. Please get in touch with Dorothy (<a href="mailto:d.butchard@bham.ac.uk">d.butchard@bham.ac.uk</a>) and Jeremy (<a href="mailto:j.kidwell@bham.ac.uk">j.kidwell@bham.ac.uk</a>).
     </p>
 </section>
 
