--- a/django/researchdata/templates/researchdata/survey-create.html
+++ b/django/researchdata/templates/researchdata/survey-create.html
@@ -18,6 +18,7 @@
         {% csrf_token %}
         <input type="hidden" id="id_geolocation_latitude" name="geolocation_latitude">
         <input type="hidden" id="id_geolocation_longitude" name="geolocation_longitude">
+        <input type="hidden" id="id_geolocation_accuracy" name="geolocation_accuracy">
         <p>
             <label for="id_where_are_you">Where are you?</label>
             <select name="where_are_you" id="id_where_are_you" required="required">
