--- a/django/core/static/css/custom.css
+++ b/django/core/static/css/custom.css
@@ -14,7 +14,7 @@ html, body {
 }
 
 a {
-    color: #FFF;
+    color: var(--color-primary);
     font-weight: 500;
 }
 
@@ -399,7 +399,7 @@ main a {
 
 #campus-iframe {
     width: 100%;
-    height: calc(100vh - 5em);
+    height: calc(100vh - 7em);
     margin-top: 4em;
     display: block;
     border: none;
